k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: seip
  labels:
    name: seip
    environment: production
    managed-by: kubectl
